; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/book3s64/extr_radix_tlb.c__tlbiel_kernel_broadcast.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/book3s64/extr_radix_tlb.c__tlbiel_kernel_broadcast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_tlbiel_kernel = common dso_local global i32 0, align 4
@tlbie_capable = common dso_local global i64 0, align 8
@RIC_FLUSH_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @_tlbiel_kernel_broadcast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_tlbiel_kernel_broadcast() #0 {
  %1 = load i32, i32* @do_tlbiel_kernel, align 4
  %2 = call i32 @on_each_cpu(i32 %1, i32* null, i32 1)
  %3 = load i64, i64* @tlbie_capable, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @RIC_FLUSH_ALL, align 4
  %7 = call i32 @_tlbie_pid(i32 0, i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @on_each_cpu(i32, i32*, i32) #1

declare dso_local i32 @_tlbie_pid(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
